UsersAPI - specification and code update
