# api/microservices/users/openapi.yaml
@@ -8,30 +8,27 @@ servers:
   url: https://virtserver.swaggerhub.com/ADRIANTORREMOCHA_1/UsersAPI/1.0.0
 paths:
   /v1/verify_token:
-    post:
-      description: Returns user info from the user oatuh token
-      operationId: post-verify_token
-      parameters:
-      - description: Google OAuth user authentication token
-        explode: true
-        in: query
-        name: auth_token
-        required: true
-        schema:
-          type: string
-        style: form
+    put:
+      description: Returns user info from the user oauth token
+      operationId: put-verify_token
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
       responses:
         "200":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/VerifyResponse'
-          description: "OK, valid token"
-        "400":
-          description: "Bad Request, invalid token"
+          description: OK
+        "401":
+          description: "Unauthorized, invalid token"
       summary: Verify user token
       tags:
-      - v1/public
+      - v1/internal
   /v1/users/{user_id}:
     get:
       description: Retrieves user info by the unique account email
@@ -43,114 +40,27 @@ paths:
         name: user_id
         required: true
         schema:
-          format: email
+          format: uuid
           type: string
-        style: simple
-      - description: Client's authenticated email
-        explode: false
-        in: header
-        name: user_email
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      - description: "True if user is an admin user, False otherwise"
-        explode: false
-        in: header
-        name: admin
-        required: true
-        schema:
-          type: boolean
         style: simple
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserInfo'
+                $ref: '#/components/schemas/PublicUserInfo'
           description: OK
-        "401":
-          description: "Unauthorized, invalid token or no token provided"
+        "403":
+          description: Forbidden
         "404":
           description: User not found
       summary: Get user info
       tags:
       - v1/public
-    head:
-      description: Checks wheter the user email is registered in the application
-      operationId: head-users-user_email
-      parameters:
-      - description: User unique id
-        explode: false
-        in: path
-        name: user_id
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      responses:
-        "200":
-          description: OK
-        "404":
-          description: Not Found
-      summary: Check user
-      tags:
-      - v1/internal
-    put:
-      description: Updates user account info
-      operationId: put-users-user_email
-      parameters:
-      - description: User unique id
-        explode: false
-        in: path
-        name: user_id
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      - description: Client's authenticated email
-        explode: false
-        in: header
-        name: user_email
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      - description: "True if user is an admin user, False otherwise"
-        explode: false
-        in: header
-        name: admin
-        required: true
-        schema:
-          type: boolean
-        style: simple
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/NewUserInfo'
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserInfo'
-          description: OK
-        "401":
-          description: User unauthorized for this operation
-        "404":
-          description: User not found
-      summary: Update user info
-      tags:
-      - v1/public
   /v1/users/{user_id}/rating:
     put:
       description: Update the given user's rating
-      operationId: put-v1-users-user_email-rating
+      operationId: put-user-rating
       parameters:
       - description: Unique user id
         explode: false
@@ -158,112 +68,27 @@ paths:
         name: user_id
         required: true
         schema:
+          format: uuid
           type: string
         style: simple
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewRating'
+              format: double
+              type: number
       responses:
         "204":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfo'
           description: No Content
         "404":
           description: Not Found
       summary: Update user rating
       tags:
       - v1/internal
-  /v1/users/{user_id}/image:
-    put:
-      description: Update the given user's profile picture
-      operationId: put-users-user_id-image
-      parameters:
-      - description: The unique user ID
-        explode: false
-        in: path
-        name: user_id
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: Client's authenticated email
-        explode: false
-        in: header
-        name: user_email
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      - description: "True if user is an admin user, False otherwise"
-        explode: false
-        in: header
-        name: admin
-        required: true
-        schema:
-          type: boolean
-        style: simple
-      requestBody:
-        content:
-          application/json:
-            schema:
-              format: uri
-              type: string
-      responses:
-        "200":
-          description: OK
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-      summary: Update user image
-      tags:
-      - v1/public
-  /v1/users/{user_id}/username:
-    put:
-      description: Update the given user's username
-      operationId: put-users-user_id-username
-      parameters:
-      - description: The unique user ID
-        explode: false
-        in: path
-        name: user_id
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: Client's authenticated email
-        explode: false
-        in: header
-        name: user_email
-        required: true
-        schema:
-          format: email
-          type: string
-        style: simple
-      - description: "True if user is an admin user, False otherwise"
-        explode: false
-        in: header
-        name: admin
-        required: true
-        schema:
-          type: boolean
-        style: simple
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: string
-      responses:
-        "200":
-          description: OK
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-      summary: Update user username
-      tags:
-      - v1/public
 components:
   schemas:
     VerifyResponse:
@@ -308,16 +133,11 @@ components:
       type: object
     NewUserInfo:
       description: Model used to update an existing user information
-      example:
-        image: https://openapi-generator.tech
-        username: username
       properties:
         username:
-          title: username
           type: string
         image:
           format: uri
-          title: image
           type: string
           x-stoplight:
             id: ptmzghhypmriv
@@ -378,17 +198,47 @@ components:
       - username
       title: User Info
       type: object
-    NewRating:
+    PublicUserInfo:
       description: ""
       example:
-        rating: 0.8008282
+        image: https://openapi-generator.tech
+        rating: 0.8008281904610115
+        id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        email: email
+        username: username
       properties:
+        id:
+          format: uuid
+          title: id
+          type: string
+        email:
+          format: email
+          title: email
+          type: string
+          x-stoplight:
+            id: 4b9wb37kpwp0o
+        username:
+          title: username
+          type: string
+          x-stoplight:
+            id: 5uju42mzuimmv
+        image:
+          format: uri
+          title: image
+          type: string
+          x-stoplight:
+            id: f9z9p6if8b0s4
         rating:
-          format: float
+          format: double
           title: rating
           type: number
+          x-stoplight:
+            id: s4c9nz6ai0xb7
       required:
+      - id
+      - image
       - rating
-      title: NewRating
+      - username
+      title: PublicUserInfo
       type: object
   securitySchemes: {}
