# api/microservices/users/src/openapi_server/apis/v1_internal_api_base.py
@@ -2,8 +2,8 @@
 
 from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
-from openapi_server.models.new_rating import NewRating
 from openapi_server.models.user_info import UserInfo
+from openapi_server.models.verify_response import VerifyResponse
 
 
 class BaseV1InternalApi:
@@ -12,19 +12,18 @@ class BaseV1InternalApi:
     def __init_subclass__(cls, **kwargs):
         super().__init_subclass__(**kwargs)
         BaseV1InternalApi.subclasses = BaseV1InternalApi.subclasses + (cls,)
-    async def check_user(
-        self,
-        user_id: str,
-        user_email: str,
-    ) -> None:
-        """Checks wheter the user email is registered in the application"""
-        ...
-
-
     async def put_user_rating(
         self,
         user_id: str,
-        new_rating: NewRating,
+        body: float,
     ) -> UserInfo:
         """Update the given user&#39;s rating"""
+        ...
+
+
+    async def put_verify_token(
+        self,
+        body: str,
+    ) -> VerifyResponse:
+        """Returns user info from the user oauth token"""
         ...
