# api/microservices/users/src/openapi_server/apis/v1_public_api_base.py
@@ -2,9 +2,7 @@
 
 from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
-from openapi_server.models.new_user_info import NewUserInfo
-from openapi_server.models.user_info import UserInfo
-from openapi_server.models.verify_response import VerifyResponse
+from openapi_server.models.public_user_info import PublicUserInfo
 
 
 class BaseV1PublicApi:
@@ -16,49 +14,6 @@ class BaseV1PublicApi:
     async def get_user_info(
         self,
         user_id: str,
-        user_email: str,
-        admin: bool,
-    ) -> UserInfo:
+    ) -> PublicUserInfo:
         """Retrieves user info by the unique account email"""
-        ...
-
-
-    async def post_verify_token(
-        self,
-        auth_token: str,
-    ) -> VerifyResponse:
-        """Returns user info from the user oatuh token"""
-        ...
-
-
-    async def put_user_info(
-        self,
-        user_id: str,
-        user_email: str,
-        admin: bool,
-        new_user_info: NewUserInfo,
-    ) -> UserInfo:
-        """Updates user account info"""
-        ...
-
-
-    async def put_user_image(
-        self,
-        user_id: str,
-        user_email: str,
-        admin: bool,
-        body: str,
-    ) -> UserInfo:
-        """Update the given user&#39;s profile picture"""
-        ...
-
-
-    async def put_user_username(
-        self,
-        user_id: str,
-        user_email: str,
-        admin: bool,
-        body: str,
-    ) -> UserInfo:
-        """Update the given user&#39;s username"""
         ...
