# api/microservices/users/src/openapi_server/impl/v1_internal_api.py
@@ -1,10 +1,11 @@
 from bson import ObjectId
 from fastapi import HTTPException
 from motor.motor_asyncio import AsyncIOMotorClient
+from firebase_admin import auth
 
 from openapi_server.apis.v1_internal_api_base import BaseV1InternalApi
-from openapi_server.models.new_rating import NewRating
 from openapi_server.models.user_info import UserInfo
+from openapi_server.models.verify_response import VerifyResponse
 
 client = AsyncIOMotorClient("mongodb+srv://lawiki:lawiki@lawiki.vhgmr.mongodb.net/")
 mongodb = client.get_database("laWikiV2BD")
@@ -18,25 +19,43 @@ pipeline_remove_id = [
 
 class V1InternalAPI(BaseV1InternalApi):
 
-    async def check_user(
-            self,
-            user_id: str,
-            user_email: str,
-    ) -> None:
-        """Checks whether the user email is registered in the application.
-        Also checks if the provided email is the same as the user_id account email"""
+    async def put_verify_token(
+        self,
+        body: str,
+    ) -> VerifyResponse:
+        """Returns user info from the user oatuh token"""
+        try:
+            decoded_token = auth.verify_id_token(body)
+            token_email = decoded_token['email']
+            token_username = decoded_token['name']
+            token_image = decoded_token['picture']
+            token_iat = decoded_token['iat']
+            token_exp = decoded_token['exp']
+        except Exception as e:
+            raise HTTPException(status_code=401, detail="Unauthorized, invalid token")
 
-        user = await mongodb['user'].find_one({"_id": ObjectId(user_id)})
-        if not user :
-            raise HTTPException(status_code=404, detail="User not found")
-        if user_email and user['email'] != user_email:
-            raise HTTPException(status_code=400, detail="User email does not match")
-        return None
+        user_info = await mongodb['user'].aggregate(
+            [{'$match': {'email': token_email}}, *pipeline_remove_id]
+        ).to_list(length=None)
+        if user_info:
+            user_info = UserInfo(**user_info[0])
+        else:
+            new_user = {
+                'email': token_email,
+                'username': token_username,
+                'image': token_image,
+                'rating': 0,
+                'admin': False
+            }
+            res = await mongodb['user'].insert_one(new_user)
+            user_info = UserInfo(**{**new_user, 'id': str(res.inserted_id)})
+
+        return VerifyResponse(auth_token=body, iat_date=token_iat, exp_date=token_exp, user_info=user_info)
 
     async def put_user_rating(
-            self,
-            user_id: str,
-            new_rating: NewRating,
+        self,
+        user_id: str,
+        body: float,
     ) -> UserInfo:
         """Update the given user's rating"""
         user = await mongodb['user'].aggregate(
@@ -45,5 +64,5 @@ class V1InternalAPI(BaseV1InternalApi):
         if not user[0]:
             raise HTTPException(status_code=404, detail="User not found")
 
-        await mongodb['user'].update_one({"id": ObjectId(user_id)}, {"$set": {"rating": new_rating.rating}})
-        return UserInfo(**{**user[0], "rating": new_rating.rating})
+        await mongodb['user'].update_one({"id": ObjectId(user_id)}, {"$set": {"rating": body}})
+        return UserInfo(**{**user[0], "rating": body})
